tests/NormalTests/paczka1/fuzzy1/90520251.err
Error in line 2: WaZjTQEQ S791 41,2
Error in line 10: CtY S668 11,1
Error in line 4: 4HWN0f S668 17,7
Error in line 18: WaZjTQEQ S668 90,2
Error in line 21: S668 S791 0,9
